ensure stream are closed in a finally block
git-svn-id: https://svn.apache.org/repos/asf/maven/archetype/trunk@1143400 13f79535-47bb-0310-9956-ffa450edef68